Fixed up drop down menu for style select to be more visible

--- a/ghi/src/CreateOutfit/CreateOutfit.css
+++ b/ghi/src/CreateOutfit/CreateOutfit.css
@@ -95,6 +95,7 @@
   font-size: 2.5vmin !important;
   border-radius: 15px;
   margin-bottom: 0px;
+  background-color: rgb(68, 4, 114);
 }
 
 .create-outfit-button {
@@ -112,4 +113,8 @@
 }
 .create-outfit-button:hover {
   background-color: blue;
+}
+
+.category {
+  background-color: blueviolet;
 }
